2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/SDCCnaddr.hpp,
	  src/SDCCpeeph.c,
	  src/hc08/ralloc2.cc,
	  src/mos6502/ralloc2.cc,
	  src/pdk/ralloc2.cc,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc2.cc:
	  Fix issues found via the infer linter.

2024-11-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 struct/union parameter passing codegen.
	* src/SDCCcse.h,
	  src/SDCCsymt.c,
	  support/valdiag/tests/bug-3801.c:
	  Fix issues found via the sparse linter, including bug #3801.

2024-11-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peeph.def:
	  Improve z80 jump tables (RFE #941).

2024-11-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3799.c,
	  support/regression/tests/gcc-torture-execute-pr44575.c:
	  Fix bug #3799.

2024-11-20 Benedikt Freisen <b.freisen AT gmx.net>

	* support/regression/ports/ds390/uCsim.cmd,
	  support/regression/ports/ez80-z80/uCsim.cmd,
	  support/regression/ports/f8/uCsim.cmd,
	  support/regression/ports/hc08/uCsim.cmd,
	  support/regression/ports/mcs51-common/uCsim.cmd,
	  support/regression/ports/pdk13/uCsim.cmd,
	  support/regression/ports/pdk14/uCsim.cmd,
	  support/regression/ports/pdk15-stack-auto/uCsim.cmd,
	  support/regression/ports/pdk15/uCsim.cmd,
	  support/regression/ports/s08-stack-auto/uCsim.cmd,
	  support/regression/ports/s08/uCsim.cmd,
	  support/regression/ports/stm8-large/uCsim.cmd,
	  support/regression/ports/stm8/uCsim.cmd,
	  support/regression/ports/tlcs90/uCsim.cmd,
	  support/regression/ports/uc6502-stack-auto/uCsim.cmd,
	  support/regression/ports/uc6502/uCsim.cmd,
	  support/regression/ports/uc65c02/uCsim.cmd,
	  support/regression/ports/ucgbz80/uCsim.cmd,
	  support/regression/ports/ucr2k/uCsim.cmd,
	  support/regression/ports/ucr2ka/uCsim.cmd,
	  support/regression/ports/ucr3ka/uCsim.cmd,